# SparkStreaming

./: analytics_producer.py  docker-compose.yml  pyproject.toml  readme.md
apps/: analytics.ipynb  setup.sh  spark_stream_analyzer.py
apps/.ipynb_checkpoints/: analytics-checkpoint.ipynb
db/: init.sql
helper/: analytics_consumer.py
